# Harness

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  agent_spec.py  base.py  dev_agent.py  documentation_agent.py  domain_knowledge_agent.py  fix_develop_agent.py  organization.py  plan_agent.py  planning_assistant_agent.py  qa_agent.py  qa_plan.py  review_agent.py  uiux_designer_agent.py
agents/playbooks/: README.md  api-connect.md  backend-kotlin-spring.md  documentation.md  (+3 more)
ai_harness/: cli.py
docs/: agent-knowledge-flow.md  agent-markdown-specs.md  ai-organization.md  architecture.md  cli-reference.md  cli-usage-guide.md  codex-playbook-handoff.md  codex-playbook-runner.md  db-schema.md  mvp.md  operations.md
mcp/: __init__.py  tool_layer.py
memory/: __init__.py  context.py
notes/: issue-chat-report-and-music-recommendation.md
orchestrator/: __init__.py  main.py
prompts/: dev-agent.md  plan-agent.md  qa-agent.md
rules/: backend-runner.md  core.md  localization.md
sandbox/: __init__.py  docker_runner.py
scripts/: check.sh  dev.sh
tests/: conftest.py  test_agent_spec.py  test_api.py  test_cli.py  test_dashboard.py  test_dev_runner_routing.py  test_domain_knowledge_agent.py  test_github_webhook.py  test_legacy_execution_layer.py  test_notifications.py  test_planning_assistant_agent.py  test_project_status_sync.py  test_qa_agent.py  test_responsibility_runners.py  test_state_machine.py  test_uiux_designer_agent.py
workflows/: __init__.py  kanban-state-machine.md  state_machine.py
(+41 files in other folders)
