[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-harness"
version = "0.1.0"
description = "Human-controlled multi-agent software development harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "gitpython>=3.1",
    "httpx>=0.27",
    "playwright>=1.48",
    "python-json-logger>=2.0",
]

[project.scripts]
harness = "ai_harness.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_harness*", "orchestrator*", "agents*", "workflows*", "sandbox*", "mcp*", "memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
